tests/exec/assert-ge.stderr
At line 1.1 Assertion failed left >= right:
left:  "abc"
right: "def"

Error occurred.
