tests/exec/assert-ge.exec
cmd: load assert-ge.ecl
status: 1
